<resources>
    <string name="app_name">ToDoList App</string>
    <string name="textView4">Email : </string>
    <string name="textView5">Password : </string>
    <string name="tv_email"></string>
    <string name="tv_password"></string>


    <string name="bt_addNew">ADD</string>
    <string name="tv_todolist">Add ToDo-List</string>
    <string name="ti_judul">Judul</string>
    <string name="ti_catatan">Catatan</string>
    <string name="bt_add">ADD</string>
</resources>
